--- a/frontend/src/styles-variables.scss
+++ b/frontend/src/styles-variables.scss
@@ -1,4 +1,5 @@
-@use '@angular/material' as mat;
+@import '~@angular/material/theming';//notice that the file imported is also different
+@include mat-core();
 
 $toolbar-breakpoint: 600px;
 
@@ -15,5 +16,5 @@ $grid-breakpoints: (
   xl: 1200px
 );
 
-$success-colors: mat.define-palette(mat.$green-palette, 400);
-$warning-colors: mat.define-palette(mat.$amber-palette, 400);
+$success-colors: mat-palette($mat-green, 400);
+$warning-colors: mat-palette($mat-amber, 400);
