--- a/frontend/src/app/app/app.component.html
+++ b/frontend/src/app/app/app.component.html
@@ -1,38 +1,35 @@
+<!-- HEADER -->
+<mat-toolbar class="toolbar-header" color="primary">
+  <button mat-icon-button (click)="sidenav.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
 
-<div [class]="'theme-wrapper default-theme'">
+  <span>Nabthat Task</span>
+</mat-toolbar>
 
-  <div class="wrapper">
 
-    <mat-sidenav-container>
 
-      <mat-sidenav #sidenav mode="push">
-        <mat-nav-list>
-          <a mat-list-item (click)="sidenav.close()" [routerLink]="['vehicles']"
-            routerLinkActive="active">
-            Vehicles
-          </a>
-        </mat-nav-list>
-      </mat-sidenav>
+<mat-sidenav-container class="site-wrapper" [hasBackdrop]="true">
 
-    </mat-sidenav-container>
+  <mat-sidenav #sidenav mode="side">
+    <mat-nav-list>
+      <a mat-list-item (click)="sidenav.close()" [routerLink]="['dashboard']" routerLinkActive="mat-list-single-selected-option">
+        <mat-icon matListIcon>cottage</mat-icon>
+        Dashboard
+      </a>
+      <a mat-list-item (click)="sidenav.close()" [routerLink]="['vehicles']" routerLinkActive="mat-list-single-selected-option">
+        <mat-icon matListIcon>directions_car</mat-icon>
+        Vehicles
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
 
-      <div class="toolbar" [style.position]="'fixed'" [class.mat-elevation-z4]="true">
-        <mat-toolbar color="primary">
-          <button mat-icon-button class="d-md-none" (click)="sidenav.open()">
-            <fa-icon icon="bars"></fa-icon>
-          </button>
+  <mat-sidenav-content class="site-content">
+      <router-outlet #o="outlet"></router-outlet>
+  </mat-sidenav-content>
 
-          <span class="d-none d-md-inline">
-            <button mat-button class="nav-button" [routerLink]="['vehicles']" routerLinkActive="active">Vehicles</button>
-          </span>
+</mat-sidenav-container>
 
-        </mat-toolbar>
-      </div>
 
-      <div class="content">
-        <router-outlet #o="outlet"></router-outlet>
-      </div>
-
-    </div>
-
-</div>
+<!-- FOOTER -->
+<mat-toolbar class="toolbar-footer">Nabthat</mat-toolbar>
