--- a/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.html
+++ b/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.html
@@ -1,69 +1,62 @@
-<div class="mat-elevation-z8">
+<div class="spinner-container" *ngIf="dataSource.loading$ | async">
+  <mat-spinner></mat-spinner>
+</div>
 
-  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-    <mat-spinner style="margin:0 auto;"></mat-spinner>
-  </div>
 
-  <mat-form-field appearance="legacy">
-    <mat-label>Clearable input</mat-label>
-    <input matInput type="text" [(ngModel)]="value">
-    <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-form-field>
+<div class='table-container' [hidden]="dataSource.loading$ | async">
+  <table mat-table class="full-width-table" matSort (matSortChange)="changeSort()" [matSortActive]="sortActive" [matSortDirection]="sortDirection" matSortDisableClear='true' aria-label="Vehicles">
+    <!-- Id Column -->
+    <ng-container matColumnDef="index">
+      <th mat-header-cell *matHeaderCellDef>Index</th>
+      <td mat-cell *matCellDef="let row; let i= index">{{paginator.pageSize * paginator.pageIndex + i + 1}}</td>
+    </ng-container>
 
-  <div class='table-container' [hidden]="dataSource.loading$ | async">
-    <table mat-table class="full-width-table" matSort (matSortChange)="changeSort()" [matSortActive]="sortActive" [matSortDirection]="sortDirection" matSortDisableClear='true' aria-label="Vehicles">
-      <!-- Id Column -->
-      <ng-container matColumnDef="index">
-        <th mat-header-cell *matHeaderCellDef>Index</th>
-        <td mat-cell *matCellDef="let row; let i= index">{{paginator.pageSize * paginator.pageIndex + i + 1}}</td>
-      </ng-container>
+    <!-- Year Column -->
+    <ng-container matColumnDef="year">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Year</th>
+      <td mat-cell *matCellDef="let row">{{row.year}}</td>
+    </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="year">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Year</th>
-        <td mat-cell *matCellDef="let row">{{row.year}}</td>
-      </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-stroked-button color="link" (click)="openDialog( row )">{{row.name}}</button>
+      </td>
+    </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let row">
-          <a role='button' [routerLink]="['/vehicles/', row.vin]">{{row.name}}</a>
-        </td>
-      </ng-container>
+    <!-- VIN Column -->
+    <ng-container matColumnDef="vin">
+      <th mat-header-cell *matHeaderCellDef>VIN</th>
+      <td mat-cell *matCellDef="let row">{{row.vin}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="vin">
-        <th mat-header-cell *matHeaderCellDef>VIN</th>
-        <td mat-cell *matCellDef="let row">{{row.vin}}</td>
-      </ng-container>
+    <!-- Stock Column -->
+    <ng-container matColumnDef="stock">
+      <th mat-header-cell *matHeaderCellDef>Stock</th>
+      <td mat-cell *matCellDef="let row">{{row.stock}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="stock">
-        <th mat-header-cell *matHeaderCellDef>Stock</th>
-        <td mat-cell *matCellDef="let row">{{row.stock}}</td>
-      </ng-container>
+    <!-- Price Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+      <td mat-cell *matCellDef="let row">{{row.price}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-        <td mat-cell *matCellDef="let row">{{row.price}}</td>
-      </ng-container>
+    <!-- Status Column -->
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef>Status</th>
+      <td mat-cell *matCellDef="let row">{{row.translatedStatus}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let row">{{row.translatedStatus}}</td>
-      </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-
-    <mat-paginator #paginator
-        [pageSize]='defaultPageSize'
-        [pageSizeOptions]='availablePageSizes'
-        (page)="changePage()"
-        aria-label="Select page">
-    </mat-paginator>
-  </div>
-
+  <mat-paginator #paginator
+      [pageSize]='defaultPageSize'
+      [pageSizeOptions]='availablePageSizes'
+      (page)="changePage()"
+      aria-label="Select page">
+  </mat-paginator>
 </div>
