--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,28 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
-@import '@angular/material/prebuilt-themes/pink-bluegrey.css';
-// @import '~@angular/material/theming';//notice that the file imported is also different
-// @include mat-core();
+@import '@angular/material/prebuilt-themes/purple-green.css';
 
 
-// @import 'styles-variables';
+*, ::after, ::before {
+  -webkit-text-size-adjust: none;
+  box-sizing: border-box;
+}
 
-// @import '~bootstrap/scss/bootstrap-reboot';
-// @import '~bootstrap/scss/bootstrap-grid';
-// @import 'styles-reset';
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #303030;
+}
 
-// @import './themes/default-theme';
-// @import 'styles-reset.scss-theme';
-// @import './app/app/app.component.scss-theme';
+html, body {
+  height: 100%;
+}
 
-// @mixin custom-components-theme($theme) {
-//   @include app-styles-reset-theme($theme);
-//   @include app-app-component-theme($theme);
-// }
-
-// .default-theme {
-//   @include custom-components-theme($app-theme);
-// }
-
-// .mat-progress-spinner circle, .mat-spinner circle {
-//   stroke: #3f51b5;
-// }
+.mat-drawer.mat-drawer-side{
+  min-width: 200px;
+}
