upgrade for location

--- a/frontend/src/app/features/vehicles/vehicles-show/vehicles-show.component.html
+++ b/frontend/src/app/features/vehicles/vehicles-show/vehicles-show.component.html
@@ -1,11 +1,11 @@
-<h1 mat-dialog-title>Vehicle</h1>
-<div mat-dialog-content>
+<h1>Vehicle</h1>
+<div>
   <mat-list>
 
     <mat-list-item>
       <mat-icon mat-list-icon>pin</mat-icon>
       <p matLine>VIN</p>
-      <p matLine>{{data.vin}}</p>
+      <p matLine>{{vehicle.vin}}</p>
     </mat-list-item>
 
     <mat-divider></mat-divider>
@@ -13,7 +13,7 @@
     <mat-list-item>
       <mat-icon mat-list-icon>tag</mat-icon>
       <p matLine>Stock</p>
-      <p matLine>{{data.stock}}</p>
+      <p matLine>{{vehicle.stock}}</p>
     </mat-list-item>
 
     <mat-divider></mat-divider>
@@ -21,7 +21,7 @@
     <mat-list-item>
       <mat-icon mat-list-icon>calendar_today</mat-icon>
       <p matLine>Year</p>
-      <p matLine>{{data.year}}</p>
+      <p matLine>{{vehicle.year}}</p>
     </mat-list-item>
 
     <mat-divider></mat-divider>
@@ -29,7 +29,7 @@
     <mat-list-item>
       <mat-icon mat-list-icon>directions_car</mat-icon>
       <p matLine>Make</p>
-      <p matLine>{{data.make}}</p>
+      <p matLine>{{vehicle.make}}</p>
     </mat-list-item>
 
     <mat-divider></mat-divider>
@@ -37,7 +37,7 @@
     <mat-list-item>
       <mat-icon mat-list-icon>directions_car</mat-icon>
       <p matLine>Model</p>
-      <p matLine>{{data.model}}</p>
+      <p matLine>{{vehicle.model}}</p>
     </mat-list-item>
 
     <mat-divider></mat-divider>
@@ -45,7 +45,7 @@
     <mat-list-item>
       <mat-icon mat-list-icon>directions_car</mat-icon>
       <p matLine>Trim</p>
-      <p matLine>{{data.trim}}</p>
+      <p matLine>{{vehicle.trim}}</p>
     </mat-list-item>
 
     <mat-divider></mat-divider>
@@ -53,7 +53,7 @@
     <mat-list-item>
       <mat-icon mat-list-icon>request_quote</mat-icon>
       <p matLine>Price</p>
-      <p matLine>{{data.price}}</p>
+      <p matLine>{{vehicle.price}}</p>
     </mat-list-item>
 
   </mat-list>
