--- a/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.html
+++ b/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.html
@@ -21,7 +21,14 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
       <td mat-cell *matCellDef="let row">
-        <button mat-stroked-button color="link" (click)="openDialog( row )">{{row.name}}</button>
+        <a mat-button color="link" [routerLink]="['/vehicles', row.vin]">{{row.name}}</a>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="location">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Location</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-stroked-button color="link" (click)="openLocationDialog( row.location )">{{row.location.name}}</button>
       </td>
     </ng-container>
 
