--- a/frontend/src/app/features/vehicles/vehicles-show/vehicles-show.component.html
+++ b/frontend/src/app/features/vehicles/vehicles-show/vehicles-show.component.html
@@ -1,4 +1,10 @@
-<h1>Vehicle</h1>
+<h1>
+  <button mat-mini-fab color="accent" (click)="back()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+  Vehicle
+</h1>
+
 <div>
   <mat-list>
 
