--- a/frontend/src/app/shared/components/location-modal/location-modal.component.html
+++ b/frontend/src/app/shared/components/location-modal/location-modal.component.html
@@ -20,7 +20,7 @@
 
     <mat-list-item>
       <mat-icon mat-list-icon>place</mat-icon>
-      <p matLine>Year</p>
+      <p matLine>Street</p>
       <p matLine>{{data.street}}</p>
     </mat-list-item>
 
