--- a/frontend/src/app/app/app.component.html
+++ b/frontend/src/app/app/app.component.html
@@ -9,15 +9,15 @@
 
 
 
-<mat-sidenav-container class="site-wrapper" [hasBackdrop]="true">
+<mat-sidenav-container class="site-wrapper">
 
-  <mat-sidenav #sidenav mode="side">
+  <mat-sidenav #sidenav mode="side" opened>
     <mat-nav-list>
-      <a mat-list-item (click)="sidenav.close()" [routerLink]="['dashboard']" routerLinkActive="mat-list-single-selected-option">
+      <a mat-list-item [routerLink]="['dashboard']" routerLinkActive="mat-list-single-selected-option">
         <mat-icon matListIcon>cottage</mat-icon>
         Dashboard
       </a>
-      <a mat-list-item (click)="sidenav.close()" [routerLink]="['vehicles']" routerLinkActive="mat-list-single-selected-option">
+      <a mat-list-item [routerLink]="['vehicles']" routerLinkActive="mat-list-single-selected-option">
         <mat-icon matListIcon>directions_car</mat-icon>
         Vehicles
       </a>
