--- a/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.html
+++ b/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.html
@@ -4,6 +4,28 @@
 
 
 <div class='table-container' [hidden]="dataSource.loading$ | async">
+
+  <div class="search-bar">
+    <mat-form-field appearance="fill">
+      <mat-label>Search by text</mat-label>
+      <input matInput type="text" [(ngModel)]="searchText">
+      <button *ngIf="searchText" matSuffix mat-icon-button aria-label="Clear" (click)="searchText=''">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+  
+    <mat-form-field appearance="fill">
+      <mat-label>Search by location</mat-label>
+      <mat-select [(value)]="searchLocation">
+        <mat-option>None</mat-option>
+        <mat-option value="option1">Option 1</mat-option>
+        <mat-option value="option2">Option 2</mat-option>
+        <mat-option value="option3">Option 3</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+
   <table mat-table class="full-width-table" matSort (matSortChange)="changeSort()" [matSortActive]="sortActive" [matSortDirection]="sortDirection" matSortDisableClear='true' aria-label="Vehicles">
     <!-- Id Column -->
     <ng-container matColumnDef="index">
@@ -21,7 +43,7 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
       <td mat-cell *matCellDef="let row">
-        <a mat-button color="link" [routerLink]="['/vehicles', row.vin]">{{row.name}}</a>
+        <button mat-stroked-button color="link" [routerLink]="['/vehicles', row.vin]">{{row.name}}</button>
       </td>
     </ng-container>
 
