--- a/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.scss
+++ b/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.scss
@@ -9,6 +9,16 @@
   align-items: center;
 }
 
+.search-bar{
+  .mat-form-field{
+    width: clamp(150px , 300px , 50%);
+
+    & + .mat-form-field{
+      margin-left: 20px;
+    }
+  }
+}
+
 .mat-header-row{
   position: sticky;
   top: 0;
