--- a/frontend/src/app/features/vehicles/vehicles-show/vehicles-show.component.scss
+++ b/frontend/src/app/features/vehicles/vehicles-show/vehicles-show.component.scss
@@ -1,3 +1,12 @@
+h1{
+  display: flex;
+  align-items: center;
+
+  button{
+    margin-right: 20px;
+  }
+}
+
 .mat-list-base .mat-list-item .mat-line:first-child{
   color: #ddd;
 }
