--- a/frontend/src/app/features/vehicles/vehicles-show/vehicles-show.component.html
+++ b/frontend/src/app/features/vehicles/vehicles-show/vehicles-show.component.html
@@ -62,5 +62,11 @@
       <p matLine>{{vehicle.price}}</p>
     </mat-list-item>
 
+    <mat-list-item>
+      <mat-icon mat-list-icon>map</mat-icon>
+      <p matLine>Location</p>
+      <p matLine>{{vehicle.location.combinedName}}</p>
+    </mat-list-item>
+
   </mat-list>
 </div>
