--- a/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.html
+++ b/frontend/src/app/features/vehicles/vehicles-list/vehicles-list.component.html
@@ -3,89 +3,113 @@
 </div>
 
 
-<div class='table-container' [hidden]="dataSource.loading$ | async">
+<div class='table-container'>
 
   <div class="search-bar">
     <mat-form-field appearance="fill">
       <mat-label>Search by text</mat-label>
-      <input matInput type="text" [(ngModel)]="searchText">
-      <button *ngIf="searchText" matSuffix mat-icon-button aria-label="Clear" (click)="searchText=''">
+      <input matInput type="text" [(ngModel)]="filterSearch" (ngModelChange)='onFilterSearchChange($event)'>
+      <button *ngIf="filterSearch" matSuffix mat-icon-button aria-label="Clear" (click)="filterSearch=''">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Search by kind</mat-label>
+      <mat-select [(value)]="filterKind" (selectionChange)='onFilterSelectChange($event)'>
+        <mat-option>None</mat-option>
+        <mat-option value="new">New</mat-option>
+        <mat-option value="used">Used</mat-option>
+      </mat-select>
+    </mat-form-field>
   
     <mat-form-field appearance="fill">
-      <mat-label>Search by location</mat-label>
-      <mat-select [(value)]="searchLocation">
+      <mat-label>Search by status</mat-label>
+      <mat-select [(value)]="filterStatus" (selectionChange)='onFilterSelectChange($event)'>
         <mat-option>None</mat-option>
-        <mat-option value="option1">Option 1</mat-option>
-        <mat-option value="option2">Option 2</mat-option>
-        <mat-option value="option3">Option 3</mat-option>
+        <mat-option value="available">Available</mat-option>
+        <mat-option value="in_transit">In Transit</mat-option>
+        <mat-option value="sold">Sold</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
 
+  <div class='table-results' [hidden]="dataSource.loading$ | async">
+    <table mat-table class="full-width-table" matSort (matSortChange)="changeSort()" [matSortActive]="sortActive" [matSortDirection]="sortDirection" matSortDisableClear='true' aria-label="Vehicles">
+      <!-- Id Column -->
+      <ng-container matColumnDef="index">
+        <th mat-header-cell *matHeaderCellDef>Index</th>
+        <td mat-cell *matCellDef="let row; let i= index">{{paginator.pageSize * paginator.pageIndex + i + 1}}</td>
+      </ng-container>
 
-  <table mat-table class="full-width-table" matSort (matSortChange)="changeSort()" [matSortActive]="sortActive" [matSortDirection]="sortDirection" matSortDisableClear='true' aria-label="Vehicles">
-    <!-- Id Column -->
-    <ng-container matColumnDef="index">
-      <th mat-header-cell *matHeaderCellDef>Index</th>
-      <td mat-cell *matCellDef="let row; let i= index">{{paginator.pageSize * paginator.pageIndex + i + 1}}</td>
-    </ng-container>
+      <!-- VIN Column -->
+      <ng-container matColumnDef="vin">
+        <th mat-header-cell *matHeaderCellDef>VIN</th>
+        <td mat-cell *matCellDef="let row">{{row.vin}}</td>
+      </ng-container>
 
-    <!-- Year Column -->
-    <ng-container matColumnDef="year">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Year</th>
-      <td mat-cell *matCellDef="let row">{{row.year}}</td>
-    </ng-container>
+      <!-- Kind Column -->
+      <ng-container matColumnDef="kind">
+        <th mat-header-cell *matHeaderCellDef>Kind</th>
+        <td mat-cell *matCellDef="let row">{{row.kind}}</td>
+      </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">
-        <button mat-stroked-button color="link" [routerLink]="['/vehicles', row.vin]">{{row.name}}</button>
-      </td>
-    </ng-container>
+      <!-- Year Column -->
+      <ng-container matColumnDef="year">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Year</th>
+        <td mat-cell *matCellDef="let row">{{row.year}}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="location">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Location</th>
-      <td mat-cell *matCellDef="let row">
-        <button mat-stroked-button color="link" (click)="openLocationDialog( row.location )">{{row.location.name}}</button>
-      </td>
-    </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-stroked-button color="link" [routerLink]="['/vehicles', row.vin]">{{row.name}}</button>
+        </td>
+      </ng-container>
 
-    <!-- VIN Column -->
-    <ng-container matColumnDef="vin">
-      <th mat-header-cell *matHeaderCellDef>VIN</th>
-      <td mat-cell *matCellDef="let row">{{row.vin}}</td>
-    </ng-container>
+      <!-- MSRP Column -->
+      <ng-container matColumnDef="msrp">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>MSRP</th>
+        <td mat-cell *matCellDef="let row" [innerHTML]="row.msrp | asPrice"></td>
+      </ng-container>
 
-    <!-- Stock Column -->
-    <ng-container matColumnDef="stock">
-      <th mat-header-cell *matHeaderCellDef>Stock</th>
-      <td mat-cell *matCellDef="let row">{{row.stock}}</td>
-    </ng-container>
+      <!-- Price Column -->
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+        <td mat-cell *matCellDef="let row" [innerHTML]="row.price | asPrice"></td>
+      </ng-container>
 
-    <!-- Price Column -->
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-      <td mat-cell *matCellDef="let row">{{row.price}}</td>
-    </ng-container>
+      <!-- Monthly Price Column -->
+      <ng-container matColumnDef="monthly_payment">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Monthly Payment</th>
+        <td mat-cell *matCellDef="let row" [innerHTML]="row['monthly-payment'] | asPrice"></td>
+      </ng-container>
 
-    <!-- Status Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let row">{{row.translatedStatus}}</td>
-    </ng-container>
+      <!-- Location Column -->
+      <ng-container matColumnDef="location">
+        <th mat-header-cell *matHeaderCellDef>Location</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-stroked-button color="link" (click)="openLocationDialog( row.location )">{{row.location.name}}</button>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      <!-- Status Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let row">{{row.status}}</td>
+      </ng-container>
 
-  <mat-paginator #paginator
-      [pageSize]='defaultPageSize'
-      [pageSizeOptions]='availablePageSizes'
-      (page)="changePage()"
-      aria-label="Select page">
-  </mat-paginator>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator #paginator
+        [pageSize]='defaultPageSize'
+        [pageSizeOptions]='availablePageSizes'
+        (page)="changePage()"
+        aria-label="Select page">
+    </mat-paginator>
+  </div>
+
 </div>
